[gd_scene load_steps=5 format=3 uid="uid://ktbb1xv6xufl"]

[ext_resource type="PackedScene" uid="uid://mi22hm6rc36q" path="res://models/replicator/replicator_control_panel.glb" id="1_ckmwq"]
[ext_resource type="Script" path="res://models/replicator/replicator_control_panel.gd" id="2_oies7"]
[ext_resource type="PackedScene" uid="uid://dlo812m3e6gas" path="res://models/driver_panel/button.tscn" id="2_qfplt"]
[ext_resource type="PackedScene" uid="uid://dd6hn764ix4sk" path="res://models/driver_panel/panel_lamp.tscn" id="3_m50x6"]

[node name="ReplicatorControlPanel" instance=ExtResource("1_ckmwq")]
script = ExtResource("2_oies7")

[node name="Buttons" type="Node3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.251217, 0, 0)

[node name="Button1" parent="Buttons" index="0" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, -0.185544, 0.180755)
label = "1"

[node name="Button2" parent="Buttons" index="1" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, -0.185544, 0.0610603)
label = "2"

[node name="Button3" parent="Buttons" index="2" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, -0.185544, -0.062054)
label = "3"

[node name="Button4" parent="Buttons" index="3" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, -0.0675598, 0.180755)
label = "4"

[node name="Button5" parent="Buttons" index="4" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, -0.0675598, 0.0610603)
label = "5"

[node name="Button6" parent="Buttons" index="5" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, -0.0675598, -0.062054)
label = "6"

[node name="Button7" parent="Buttons" index="6" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, 0.0538446, 0.180755)
label = "7"

[node name="Button8" parent="Buttons" index="7" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, 0.0538446, 0.0610603)
label = "8"

[node name="Button9" parent="Buttons" index="8" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, 0.0538446, -0.062054)
label = "9"

[node name="Button0" parent="Buttons" index="9" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, -0.185544, -0.185168)
label = "0"

[node name="ButtonClear" parent="Buttons" index="10" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, -0.0675598, -0.185168)
label = "C"

[node name="ButtonEnter" parent="Buttons" index="11" instance=ExtResource("2_qfplt")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0.310652, 0.0555545, -0.185168)
guard_color = Color(0.867188, 0.140723, 0.186042, 1)
label = "âž½"

[node name="Lamps" type="Node3D" parent="." index="2"]

[node name="LampNum1" parent="Lamps" index="0" instance=ExtResource("3_m50x6")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.0570913, 0.191297, 0.200561)

[node name="LampNum2" parent="Lamps" index="1" instance=ExtResource("3_m50x6")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.0570913, 0.191297, 0.132875)

[node name="LampNum3" parent="Lamps" index="2" instance=ExtResource("3_m50x6")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.0570913, 0.191297, 0.0655502)

[node name="LampNum4" parent="Lamps" index="3" instance=ExtResource("3_m50x6")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.0570913, 0.191297, -0.00276428)
